tests/compile_errors/003-break.buzz
test "break outside of loop" {
    while (true) {
        break;
    }

    if (true) {
        break;
    }

    break;
}